# CNIC-data-extractor

./: .env  .gitignore  app.py  pyproject.toml  requirements.txt
customerCnic/customerCnic/: customerCnicBackImage_1736243516629.jfif
